2025-12-19T12:32:14Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20370122115 # 1375
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-19
* notice: last 14d: unq all: 52 71
* notice: prev accum: outdated-unq outdated-all / unq all: 5132 10162 / 5186 10232
* notice: next accum: outdated-unq outdated-all / unq all: 5132 10162 / 5187 10233
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-12-19]

2025-12-19T01:16:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20356542228 # 1374
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-19
* notice: last 14d: unq all: 51 70
* notice: prev accum: outdated-unq outdated-all / unq all: 5132 10162 / 5185 10231
* notice: next accum: outdated-unq outdated-all / unq all: 5132 10162 / 5186 10232
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-12-18]

2025-12-18T01:12:49Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20322553330 # 1372
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-18
* notice: last 14d: unq all: 50 69
* notice: prev accum: outdated-unq outdated-all / unq all: 5132 10162 / 5183 10229
* notice: next accum: outdated-unq outdated-all / unq all: 5132 10162 / 5185 10231
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-12-17]

2025-12-17T12:34:59Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20302982830 # 1371