@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-12-19T12:32:14Z",
-  "count_outdated" : 10162,
-  "uniques_outdated" : 5132,
-  "count" : 10233,
-  "uniques" : 5187,
+  "timestamp" : "2025-12-20T01:12:21Z",
+  "count_outdated" : 10164,
+  "uniques_outdated" : 5134,
+  "count" : 10234,
+  "uniques" : 5188,
   "clones" : [
-    {
-      "timestamp": "2025-12-05T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2025-12-06T00:00:00Z",
       "count": 1,
@@ -133,12 +124,12 @@
     },
     {
       "timestamp": "2025-12-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
