@@ -1,12 +1,7 @@
 {
-  "count": 71,
-  "uniques": 52,
+  "count": 70,
+  "uniques": 51,
   "clones": [
-    {
-      "timestamp": "2025-12-05T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2025-12-06T00:00:00Z",
       "count": 1,
@@ -74,8 +69,8 @@
     },
     {
       "timestamp": "2025-12-19T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
