@@ -1,3 +1,12 @@
+2025-12-20T01:12:21Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20386809380 # 1376
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-20
+* notice: last 14d: unq all: 51 70
+* notice: prev accum: outdated-unq outdated-all / unq all: 5132 10162 / 5187 10233
+* notice: next accum: outdated-unq outdated-all / unq all: 5134 10164 / 5188 10234
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [2025-12-05] / [2025-12-19]
+
 2025-12-19T12:32:14Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20370122115 # 1375
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-19
